Adaption: Issue Form now asks for the type of boat being reported for.
This affects the selectable boats and the parts that are displayed.

#2

--- a/src/app/view-report/report-issue/report-issue.component.css
+++ b/src/app/view-report/report-issue/report-issue.component.css
@@ -14,3 +14,12 @@
 /deep/ .mat-vertical-content-container{
   margin-left: 12px !important;
 }
+
+.radio-group {
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.radio-button {
+  margin: 5px;
+}
