--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,6 +53,9 @@
       <a style="text-decoration: none;" href="https://github.com/LaserFlash/mcsc-UsageMaintenanceTracker" mat-list-item>
       <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" /> &nbsp; Source Code
     </a>
+      <mat-list-item>
+        Build {{build}}
+      </mat-list-item>
     </mat-list>
   </mat-sidenav>
 
