Sidenav pushes content to side
Conflicts:
	src/app/app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container class="content" [class.app-dark]="isDarkTheme" hasBackdrop="true">
-  <mat-sidenav class="sidenav noPrint" #sidenav [mode]="push" fixedInViewport="true">
+  <mat-sidenav class="sidenav noPrint" #sidenav mode="push" fixedInViewport="true">
     <img id="logo-image-drawer" src="assets/images/logo.png" alt="MCSC Logo" />
     <mat-nav-list>
 
