--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,9 @@
   </span>
 </mat-toolbar>
 
-<mat-sidenav-container class="content" fullscreen [class.app-dark]="isDarkTheme">
-  <mat-sidenav class="sidenav noPrint" #sidenav mode="over">
-    <img id="logo-image-drawer" src="assets/images/logo.png" alt="mcsc Logo" />
+<mat-sidenav-container class="content" [class.app-dark]="isDarkTheme" hasBackdrop="true">
+  <mat-sidenav class="sidenav noPrint" #sidenav [mode]="push" fixedInViewport="true">
+    <img id="logo-image-drawer" src="assets/images/logo.png" alt="MCSC Logo" />
     <mat-nav-list>
 
       <hr />
@@ -48,11 +48,11 @@
     <button mat-button class="nav-button" (click)="sidenav.close(); print();">PRINT</button>
     <mat-list style="position: relative; height: auto; padding-top:64px">
       <a style="text-decoration: none;" href="https://laserflash.tk/" mat-list-item>
-      ©2017 BrynTBennett
-    </a>
+        ©2017 BrynTBennett
+      </a>
       <a style="text-decoration: none;" href="https://github.com/LaserFlash/mcsc-UsageMaintenanceTracker" mat-list-item>
-      <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" /> &nbsp; Source Code
-    </a>
+        <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" /> &nbsp; Source Code
+      </a>
       <mat-list-item>
         Build {{build}}
       </mat-list-item>
@@ -80,4 +80,3 @@
       </a>
     </nav>
   </div>
-</mat-sidenav-container>
