Improve fix button colours for accessibility

--- a/src/app/shared/breakage-card/breakage-card.component.html
+++ b/src/app/shared/breakage-card/breakage-card.component.html
@@ -50,6 +50,6 @@
 
   </div>
   <mat-card-actions fxHide fxHide.lt-lg=false *ngIf="buttonText">
-    <button mat-button color="warn" (click)="openDialog(item)"><b>{{buttonText}}</b></button>
+    <button mat-flat-button color="warn" (click)="openDialog(item)"><b>{{buttonText}}</b></button>
   </mat-card-actions>
 </mat-card>
