--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span id="menuSpacer"></span>
-  <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="mcsc Logo" /></span>
+  <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="MCSC Logo" /></span>
   <span id="menuSpacer"></span>
   <span id="menuTitle">
     {{title}}
