--- a/src/app/view-report/report-issue/report-issue.component.html
+++ b/src/app/view-report/report-issue/report-issue.component.html
@@ -39,7 +39,7 @@
             <ng-template matStepLabel>Enter Breakage Info</ng-template>
 
             <mat-form-field>
-              <mat-select placeholder="Boat Number" formControlName="boatID" name="boatNumber" required>
+              <mat-select placeholder="Boat Name" formControlName="boatID" name="boatNumber" required>
                 <ng-container *ngFor="let boat of boats">
                   <ng-container *ngIf="relevantItemsFromType(boat)">
                     <mat-option [value]="boat.id">{{boat.name}}</mat-option>
